messaging_app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-messaging-deployment
  labels:
    app: django-messaging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-messaging
  template:
    metadata:
      labels:
        app: django-messaging
    spec:
      containers:
      - name: django-messaging
        image: wege/django-messaging:latest
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-messaging-service
spec:
  selector:
    app: django-messaging
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
