messaging_app/kubeservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  selector:
    app: django
    version: blue   # Change this to "green" when ready to switch
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
